# nba-player-positions

./: LICENSE  README.md  _quarto.yml  pyproject.toml
data/: nba_player_positions.csv  nba_player_stats.csv
src/notebooks/: nba.ipynb
src/utils/: nbaapi.py  plots.py
templates/: _tracker.html
