[project]
name = "nba-player-positions"
version = "0.1.0"
description = "Study NBA player positions through classification models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nba-api>=1.11.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]
